--- a/compare.css
+++ b/compare.css
@@ -1,15 +1,15 @@
-*[data-v-72cd7a] {
+*[data-v-340199] {
   margin: 0px;
   box-sizing: border-box;
-}select[data-v-10154c] {
+}select[data-v-56862b] {
   margin-right: 10px;
 }
-*[data-v-10154c] {
+*[data-v-56862b] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
   margin: 0px;
   box-sizing: border-box;
-}*[data-v-6af355] {
+}*[data-v-421c5d] {
   box-sizing: border-box;
   margin: 0px;
 }
