implementation of the container ajax call which allows the AJAX call to work within the container, still need env var fix for container conditoin.
Former-commit-id: 6ecbe4788e5216a3ca609494a7f0f1ffb1614021

--- a/compare.css
+++ b/compare.css
@@ -1,15 +1,15 @@
-*[data-v-340199] {
+*[data-v-7bde27] {
   margin: 0px;
   box-sizing: border-box;
-}select[data-v-56862b] {
+}select[data-v-94da3e] {
   margin-right: 10px;
 }
-*[data-v-56862b] {
+*[data-v-94da3e] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
   margin: 0px;
   box-sizing: border-box;
-}*[data-v-421c5d] {
+}*[data-v-67cf97] {
   box-sizing: border-box;
   margin: 0px;
 }
