Fixes for password screen behind proxy

--- a/views/login.pug
+++ b/views/login.pug
@@ -5,6 +5,6 @@ html
       if (message)
         h4 #{message}
       p Please provide the SPOT password to login
-      form(action = "/login" method = "POST")
+      form(action = loginurl method = "POST")
         input(name = "password" type = "password" required placeholder = "Password")
         button(type = "Submit") Login
