--- a/compare-src/src/walltime.pug
+++ b/compare-src/src/walltime.pug
@@ -5,7 +5,8 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Walltime
     style.
-        html, body {
+        html,
+        body {
             height: 100%;
             width: 100%;
             margin: 0;
@@ -13,4 +14,5 @@ html(lang="en")
         }
     body
         main
+        script(src="../../web/js/DBStorage.js?a=3")
         script(src="walltime.js")
