more error handling and error message pop up and styling of modals

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -665,4 +665,8 @@ body .bg-color-255-255-255-0 {
     .jupyter_notebook {
         width: 495px;
     }
+
+    h4 {
+        margin-top: 35px;
+    }
 }
