--- a/style/dc.scss
+++ b/style/dc.scss
@@ -644,6 +644,18 @@ body .bg-color-255-255-255-0 {
 
 .outer_modal {
 
+    .explanation {
+        position: absolute;
+    top: 8px;
+    right: 41px;
+    color: white;
+    font-weight: bold;
+    font-size: 22px;
+    padding: 3px;
+    background-color: #666;
+    border: 1px solid #888;
+    }
+
     .select_a_jup {
         padding: 10px;
         margin: 0 0 25px 0;
@@ -664,6 +676,7 @@ body .bg-color-255-255-255-0 {
 
     .jupyter_notebook {
         width: 495px;
+        margin: 15px 0 0 0;
     }
 
     h4 {
