--- a/compare.css
+++ b/compare.css
@@ -1,15 +1,15 @@
-*[data-v-43ac5a] {
+*[data-v-93b958] {
   margin: 0px;
   box-sizing: border-box;
-}select[data-v-25597c] {
+}select[data-v-4385a8] {
   margin-right: 10px;
 }
-*[data-v-25597c] {
+*[data-v-4385a8] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
   margin: 0px;
   box-sizing: border-box;
-}*[data-v-9a74df] {
+}*[data-v-871017] {
   box-sizing: border-box;
   margin: 0px;
 }
