--- a/style/dc.scss
+++ b/style/dc.scss
@@ -328,6 +328,7 @@ table.only_multi_row_selector {
 
         select {
             width: 80px;
+            margin: 1 0 0 0;
         }
     }
 
@@ -339,6 +340,14 @@ table.only_multi_row_selector {
 .composite_chart_type {
 
     .multi_row_selector {
+
+        .ofDate {
+            width: 75px;
+        }
+
+        .dimension_attribute {
+            width: 290px;
+        }
 
         .input_const {
             display: none;
