allow multiRowSelector to pick up unary selection

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -341,7 +341,7 @@ table.only_multi_row_selector {
 
     .multi_row_selector {
 
-        .ofDate {
+        .unarySelector {
             width: 75px;
         }
 
