Implemented support for operators that require a second input like const and modulo, plus the implementation of those two methods, plus the persistence for those, URL support, etc.

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -658,6 +658,11 @@ body .bg-color-255-255-255-0 {
 
 .outer_modal {
 
+    .const_binary_in {
+        width: 45px;
+        padding: 7px 1px;
+    }
+
     .explanation {
         position: absolute;
     top: 8px;
