--- a/compare.css
+++ b/compare.css
@@ -1,7 +1,8 @@
 *[data-v-93b958] {
   margin: 0px;
   box-sizing: border-box;
-}select[data-v-4385a8] {
+}
+select[data-v-4385a8] {
   margin-right: 10px;
 }
 *[data-v-4385a8] {
@@ -9,7 +10,8 @@
   font-size: 8pt;
   margin: 0px;
   box-sizing: border-box;
-}*[data-v-871017] {
+}
+*[data-v-871017] {
   box-sizing: border-box;
   margin: 0px;
 }
