--- a/compare-src/compare.css
+++ b/compare-src/compare.css
@@ -1,15 +1,22 @@
-*[data-v-72cd7a] {
-  margin: 0px;
+[data-v-7f9af9] {
   box-sizing: border-box;
-}select[data-v-10154c] {
+  margin: 0;
+}
+
+[data-v-4af12e] {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+select[data-v-d63769] {
   margin-right: 10px;
 }
-*[data-v-10154c] {
+
+[data-v-d63769] {
+  box-sizing: border-box;
+  margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
-  margin: 0px;
-  box-sizing: border-box;
-}*[data-v-6af355] {
-  box-sizing: border-box;
-  margin: 0px;
 }
+
+/*# sourceMappingURL=compare.css.map */
