--- a/compare.css
+++ b/compare.css
@@ -1,17 +1,22 @@
-*[data-v-93b958] {
-  margin: 0px;
+[data-v-7f9af9] {
   box-sizing: border-box;
+  margin: 0;
 }
-select[data-v-4385a8] {
+
+[data-v-4af12e] {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+select[data-v-d63769] {
   margin-right: 10px;
 }
-*[data-v-4385a8] {
+
+[data-v-d63769] {
+  box-sizing: border-box;
+  margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
-  margin: 0px;
-  box-sizing: border-box;
 }
-*[data-v-871017] {
-  box-sizing: border-box;
-  margin: 0px;
-}
+
+/*# sourceMappingURL=compare.css.map */
