refactor constructor and data passing from App to WalltimeApp from the walltime.js loader

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
-<script src="../sankey_dist/main.js"></script>
+    <div id="main"></div>
+    <script src="../sankey_dist/main.js"></script>
 </body>
 </html>
