--- a/style/Container.scss
+++ b/style/Container.scss
@@ -5,7 +5,7 @@
         width: 20px;
 
         div {
-            background-image: url(../img/refresh.png);
+            background-image: url(../web/img/refresh.png);
             background-size: 100% 100%;
             width: 17px;
             height: 17px
@@ -100,7 +100,7 @@
     .help_icon {
 
         div {
-            background-image: url(../img/info.png);
+            background-image: url(../web/img/info.png);
             background-size: 100% 100%;
         }
     }
@@ -109,7 +109,7 @@
         right: 95px;
 
         div {
-            background-image: url(../img/plus.png);
+            background-image: url(../web/img/plus.png);
             background-size: 100% 100%;
         }
     }
@@ -118,7 +118,7 @@
         right: 50px;
 
         div {
-            background-image: url(../img/check.png);
+            background-image: url(../web/img/check.png);
             background-size: 100% 100%;
         }
     }
